# seance

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts
.github/: cask-template.rb
.github/workflows/: release.yml
docs/brainstorms/: 2026-04-05-color-scheme-requirements.md  2026-04-05-e2e-missing-flows-requirements.md  2026-04-05-seance-v1-requirements.md  2026-04-05-session-creation-ux-requirements.md  2026-04-05-typed-mock-backend-requirements.md  2026-04-06-markdown-diff-viewer-requirements.md  2026-04-06-ux-refresh-requirements.md  2026-04-11-login-shell-sessions-requirements.md
docs/ideation/: 2026-04-05-e2e-test-suite-ideation.md
docs/plans/: 2026-04-05-001-feat-seance-v1-plan.md  2026-04-05-002-feat-atmospheric-color-scheme-plan.md  2026-04-06-001-feat-ux-refresh-plan.md  2026-04-07-001-feat-markdown-diff-viewer-plan.md  2026-04-11-001-feat-login-shell-sessions-plan.md
e2e/: multi-project.spec.ts  project-crud.spec.ts  project-picker.spec.ts  session-actions.spec.ts  session-lifecycle.spec.ts  session-view.spec.ts  settings.spec.ts  status-events.spec.ts
public/: theme-init.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cleanup.rs  hook_server.rs  identity.rs  lib.rs  main.rs  models.rs  persistence.rs  pty_engine.rs  scrollback.rs  state.rs
src-tauri/src/commands/: files.rs  mod.rs  projects.rs  sessions.rs  settings.rs  windows.rs
src-tauri/tests/: integration.rs  pty_spawn.rs
(+39 files in other folders)
