[package]
name = "seance"
version = "0.6.0"
edition = "2021"

[lib]
name = "seance_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
portable-pty = "0.9"
axum = "0.8"
urlencoding = "2"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
